tests/auto-gen/inputvalidation001/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: Error during reflection: ValidateInput.X is not in scope.

ValidateInput:13:1--13:35
 09 | --------------------
 10 | --- Unknown type ---
 11 | --------------------
 12 | 
 13 | %runElab generateGensFor "X" [] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: ValidateInput.X is not in scope.

ValidateInput:15:1--15:39
 11 | --------------------
 12 | 
 13 | %runElab generateGensFor "X" [] []
 14 | 
 15 | %runElab generateGensFor "X" ["a"] [0]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: Could not find named argument `a` of type ValidateInput.Y listed in implicit givens

ValidateInput:26:1--26:38
 22 | 
 23 | data Y : Type -> Type -> Type where
 24 |   MkY : Y Int String
 25 | 
 26 | %runElab generateGensFor "Y" ["a"] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: Could not find explicit argument #0 of type ValidateInput.NoParam listed in implicit givens

ValidateInput:33:1--33:42
 29 | 
 30 | data NoParam : Type where
 31 |   MkNoParam : NoParam
 32 | 
 33 | %runElab generateGensFor "NoParam" [0] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: Could not find explicit argument #2 of type ValidateInput.TwoExplParams listed in implicit givens

ValidateInput:40:1--40:51
 36 | 
 37 | data TwoExplParams : Type -> Type -> Type where
 38 |   MkTwoExplParams : TwoExplParams a b
 39 | 
 40 | %runElab generateGensFor "TwoExplParams" [2, 0] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: Could not find explicit argument #2 of type ValidateInput.TwoExplParams listed in implicit givens

ValidateInput:43:1--43:51
 39 | 
 40 | %runElab generateGensFor "TwoExplParams" [2, 0] []
 41 | 
 42 | -- Two errors
 43 | %runElab generateGensFor "TwoExplParams" [2, 3] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: Could not find explicit argument #2 of type ValidateInput.TwoExplParamsWithImpl listed in implicit givens

ValidateInput:50:1--50:59
 46 | 
 47 | data TwoExplParamsWithImpl : Type -> Vect n a -> Type where
 48 |   MkTwoExplParamsWithImpl : TwoExplParamsWithImpl a v
 49 | 
 50 | %runElab generateGensFor "TwoExplParamsWithImpl" [2, 0] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in implicit givens several times

ValidateInput:61:1--61:62
 57 |   MkTwoExplParamsWithImpl' : TwoExplParamsWithImpl' a v
 58 | 
 59 | --- Repeating implicit givens ---
 60 | 
 61 | %runElab generateGensFor "TwoExplParamsWithImpl" [0, 1, 1] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: named argument `v` is listed in implicit givens several times

ValidateInput:62:1--62:65
 58 | 
 59 | --- Repeating implicit givens ---
 60 | 
 61 | %runElab generateGensFor "TwoExplParamsWithImpl" [0, 1, 1] []
 62 | %runElab generateGensFor "TwoExplParamsWithImpl'" [0, "v", 1] []
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in explicit givens several times

ValidateInput:66:1--66:62
 62 | %runElab generateGensFor "TwoExplParamsWithImpl'" [0, "v", 1] []
 63 | 
 64 | --- Repeating explciit givens ---
 65 | 
 66 | %runElab generateGensFor "TwoExplParamsWithImpl" [] [0, 1, 1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in explicit givens several times

ValidateInput:67:1--67:65
 63 | 
 64 | --- Repeating explciit givens ---
 65 | 
 66 | %runElab generateGensFor "TwoExplParamsWithImpl" [] [0, 1, 1]
 67 | %runElab generateGensFor "TwoExplParamsWithImpl'" [] [0, 1, "v"]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in implicit givens several times

ValidateInput:71:1--71:63
 67 | %runElab generateGensFor "TwoExplParamsWithImpl'" [] [0, 1, "v"]
 68 | 
 69 | --- Repeating both implicit and explicit givens ---
 70 | 
 71 | %runElab generateGensFor "TwoExplParamsWithImpl" [1, 1] [0, 0]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in implicit givens several times

ValidateInput:72:1--72:68
 68 | 
 69 | --- Repeating both implicit and explicit givens ---
 70 | 
 71 | %runElab generateGensFor "TwoExplParamsWithImpl" [1, 1] [0, 0]
 72 | %runElab generateGensFor "TwoExplParamsWithImpl'" [1, "v"] ["b", 0]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #0 is listed in both implicit and explicit givens

ValidateInput:76:1--76:57
 72 | %runElab generateGensFor "TwoExplParamsWithImpl'" [1, "v"] ["b", 0]
 73 | 
 74 | --- Existence of a given which is both implicit and explicit ---
 75 | 
 76 | %runElab generateGensFor "TwoExplParamsWithImpl" [0] [0]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in both implicit and explicit givens

ValidateInput:77:1--77:57
 73 | 
 74 | --- Existence of a given which is both implicit and explicit ---
 75 | 
 76 | %runElab generateGensFor "TwoExplParamsWithImpl" [0] [0]
 77 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: explicit argument #1 is listed in both implicit and explicit givens

ValidateInput:78:1--78:60
 74 | --- Existence of a given which is both implicit and explicit ---
 75 | 
 76 | %runElab generateGensFor "TwoExplParamsWithImpl" [0] [0]
 77 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [1]
 78 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [0, 1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: named argument `v` is listed in both implicit and explicit givens

ValidateInput:80:1--80:60
 76 | %runElab generateGensFor "TwoExplParamsWithImpl" [0] [0]
 77 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [1]
 78 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [0, 1]
 79 | 
 80 | %runElab generateGensFor "TwoExplParamsWithImpl'" ["v"] [1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: named argument `v` is listed in both implicit and explicit givens

ValidateInput:81:1--81:63
 77 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [1]
 78 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [0, 1]
 79 | 
 80 | %runElab generateGensFor "TwoExplParamsWithImpl'" ["v"] [1]
 81 | %runElab generateGensFor "TwoExplParamsWithImpl'" ["v"] [0, 1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: named argument `v` is listed in both implicit and explicit givens

ValidateInput:82:1--82:61
 78 | %runElab generateGensFor "TwoExplParamsWithImpl" [1] [0, 1]
 79 | 
 80 | %runElab generateGensFor "TwoExplParamsWithImpl'" ["v"] [1]
 81 | %runElab generateGensFor "TwoExplParamsWithImpl'" ["v"] [0, 1]
 82 | %runElab generateGensFor "TwoExplParamsWithImpl'" [1] [0, 1]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Error during reflection: External generators lists have non-empty intersection: [TwoExmplParamsWithImpl]

ValidateInput:92:1--92:137
 88 | -- TODO to add some other incorrect cases, connected with external generators
 89 | 
 90 | --- Conflicting external generators ---
 91 | 
 92 | %runElab generateGensFor "Y" [] [] {externalImplicitGens = ["TwoExmplParamsWithImpl"]} {externalHintedGens = ["TwoExmplParamsWithImpl"]}
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

